@@ -309,9 +309,10 @@ public abstract class CompileOptions extends AbstractOptions {
      * Returns any additional arguments to be passed to the compiler.
      * Defaults to the empty list.
      *
-     * Compiler arguments not supported by the DSL can be added here. For example, it is possible
-     * to pass the {@code --release} option of JDK 9:
-     * <pre><code>compilerArgs.addAll(['--release', '7'])</code></pre>
+     * Compiler arguments not supported by the DSL can be added here.
+     *
+     * For example, it is possible to pass the {@code --enable-preview} option that was added in newer Java versions:
+     * <pre><code>compilerArgs.add("--enable-preview")</code></pre>
      *
      * Note that if {@code --release} is added then {@code -target} and {@code -source}
      * are ignored.
@@ -519,7 +520,7 @@ public abstract class CompileOptions extends AbstractOptions {
      *
      * @since 4.3
      *
-     * @deprecated Use {@link #getGeneratedSourceOutputDirectory()} instead. This method will be removed in Gradle 8.0.
+     * @deprecated Use {@link #getGeneratedSourceOutputDirectory()} instead. This method will be removed in Gradle 9.0.
      */
     @Nullable
     @Deprecated
@@ -527,7 +528,7 @@ public abstract class CompileOptions extends AbstractOptions {
     public File getAnnotationProcessorGeneratedSourcesDirectory() {
         DeprecationLogger.deprecateProperty(CompileOptions.class, "annotationProcessorGeneratedSourcesDirectory")
             .replaceWith("generatedSourceOutputDirectory")
-            .willBeRemovedInGradle8()
+            .willBeRemovedInGradle9()
             .withDslReference()
             .nagUser();
 
@@ -539,16 +540,16 @@ public abstract class CompileOptions extends AbstractOptions {
      *
      * @since 4.3
      *
-     * @deprecated Use {@link #getGeneratedSourceOutputDirectory()}.set() instead. This method will be removed in Gradle 8.0.
+     * @deprecated Use {@link #getGeneratedSourceOutputDirectory()}.set() instead. This method will be removed in Gradle 9.0.
      */
     @Deprecated
     public void setAnnotationProcessorGeneratedSourcesDirectory(@Nullable File file) {
-        // Used by Android plugin. Followup with https://github.com/gradle/gradle/issues/16782
-        /*DeprecationLogger.deprecateProperty(CompileOptions.class, "annotationProcessorGeneratedSourcesDirectory")
-            .replaceWith("generatedSourceOutputDirectory")
-            .willBeRemovedInGradle8()
-            .withDslReference()
-            .nagUser();*/
+        // Enable this deprecation in 8.1+. See: https://github.com/gradle/gradle/issues/16782
+//        DeprecationLogger.deprecateProperty(CompileOptions.class, "annotationProcessorGeneratedSourcesDirectory")
+//            .replaceWith("generatedSourceOutputDirectory")
+//            .willBeRemovedInGradle9()
+//            .withDslReference()
+//            .nagUser();
 
         this.generatedSourceOutputDirectory.set(file);
     }
@@ -559,6 +560,13 @@ public abstract class CompileOptions extends AbstractOptions {
      * @since 4.3
      */
     public void setAnnotationProcessorGeneratedSourcesDirectory(Provider<File> file) {
+        // Enable this deprecation in 8.1+.
+//        DeprecationLogger.deprecateProperty(CompileOptions.class, "annotationProcessorGeneratedSourcesDirectory")
+//            .replaceWith("generatedSourceOutputDirectory")
+//            .willBeRemovedInGradle9()
+//            .withDslReference()
+//            .nagUser();
+
         this.generatedSourceOutputDirectory.fileProvider(file);
     }
 
